--- a/index.html
+++ b/index.html
@@ -262,27 +262,27 @@
     ];
 const candidates = {
   "이재명": {
-    img: "https://i.namu.wiki/i/ghOm559uKd6bnpL84DPuTiStPNZY4DcI_davse1QZgGYsCqj_hUBa0hoK2mvkglZ2HJASs5_4b820-A0xYxqTRwIpHSzzwl5eNHtUzRyQXoXb1agsuu6QIsgtw4uLczswtP_f5eMIZBdNEiL3Cw_YA.webp",
+    img: "1.png",
     url: "https://ssl.pstatic.net/static.news/image/pdf/election/president2025/candidate/pledge/20250520/006_100153692.pdf"
   },
   "김문수": {
-    img: "https://i.namu.wiki/i/slv_GA4rjEMh7ICdTeIy6HUGtkMhUzYxR-qvXGv_paFWmdco-7ecgPwGt3oC9fNLmzwBTRMf643wT43QySRBDNeO0xYsdq_efmHjVrLbIDWIbS9A8Qw2ZGabstIRIXHEb1uJ9HwhRtjLdTyzyaj8-g.webp",
+    img: "2.png",
     url: "https://ssl.pstatic.net/static.news/image/pdf/election/president2025/candidate/pledge/20250520/006_100153710.pdf"
   },
   "이준석": {
-    img: "https://i.namu.wiki/i/hOHl-VhVxEOv9v4lkGj3o_qGCSSt5rpRF9wCpWH3RioXhGKpzm0nNrtrCfHpJmB2XmeaMllMQInzHBOMkoco0hoVZ9ZlurWBkqqjQvOo9yr_nPZQG12FL7S8duLA168Dn59FRfwzVrR_L0RHC4tBuQ.webp",
+    img: "4.png",
     url: "https://ssl.pstatic.net/static.news/image/pdf/election/president2025/candidate/pledge/20250520/006_100153689.pdf"
   },
   "권영국": {
-    img: "https://i.namu.wiki/i/yEeL6M9xFGwpWPgnU_vd3veV5N2hr_jIV-fyh3i4xwnrdTaPyglLx6Dg5TA0GYBON7qIcc5eN0zgqFNUwEG9FY3HxRoEVjLhI3WrhYDPtvQpKYKAieRPP6aKhK8SNotVvbhnnZPznNsit_BlmO2Xyg.webp",
+    img: "5.png",
     url: "https://ssl.pstatic.net/static.news/image/pdf/election/president2025/candidate/pledge/20250520/006_100153725.pdf"
   },
   "황교안": {
-    img: "https://i.namu.wiki/i/SyqUwtGJ7y6GnmJMt8zi_FomfAEKeg1Nh00bin0qx5gRi-ah9qtp4IFakm4F2yt-voUvIpTQtRk0d0UxjCEq2lDmhAQ40MKnpUeurl9caEGK0HuAZKI_x8Ada6KL3_OSNFGwdggHUVMwbypsdU0FsQ.webp",
+    img: "7.png",
     url: "https://ssl.pstatic.net/static.news/image/pdf/election/president2025/candidate/pledge/20250520/006_100153708.pdf"
   },
   "송진호": {
-    img: "https://i.namu.wiki/i/frEPiXDpuqvFZg__St8jBOTOXCafFWgNT3q6mJjZXb9aWC4cIPxdxGoed-sVewCA6b_1NaioqOPinzXYBCWlxcWCq7lJUFyP6VYNKrWaRrqjvYoZVH5XTIuWnBUFVpx45abInlIf87KxlA9FTliVtA.webp",
+    img: "8.png",
     url: "https://ssl.pstatic.net/static.news/image/pdf/election/president2025/candidate/pledge/20250520/006_100153722.pdf"
   }
 };
